--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node index.ts"
   },
   "dependencies": {
     "@types/redis": "^4.0.10",
+    "@types/uuid": "^10.0.0",
     "express": "^4.18.2",
-    "redis": "^5.8.2"
+    "redis": "^5.8.2",
+    "uuid": "^12.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
