--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   app:
     build: .
+    command: npm run watch
     ports:
       - "3000:3000"
     environment:
@@ -8,6 +9,8 @@ services:
       - REDIS_PORT=6379
     depends_on:
       - redis
+    volumes:
+      - .:/app
     networks:
       - fabacusnet
   redis:
