--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node index.ts"
+    "dev": "ts-node index.ts",
+    "watch": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "dependencies": {
     "@types/redis": "^4.0.10",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
 }
