--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
     build: .
-    command: npm run watch
+    command: npm run watch -- --debug
     ports:
       - "3000:3000"
     environment:
@@ -12,17 +12,18 @@ services:
     volumes:
       - .:/app
     networks:
-      - fabacusnet
+      - ticketnet
   redis:
     image: redis:7-alpine
+    command: redis-server --notify-keyspace-events Ex
     ports:
       - "6379:6379"
     volumes:
       - redis-data:/data
     networks:
-      - fabacusnet
+      - ticketnet
 volumes:
   redis-data:
 networks:
-  fabacusnet:
+  ticketnet:
     driver: bridge
