--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node index.ts",
-    "watch": "ts-node-dev --respawn --transpile-only index.ts"
+  "build": "tsc",
+  "start": "node dist/index.js",
+  "dev": "ts-node index.ts",
+  "watch": "ts-node-dev --respawn --transpile-only index.ts",
+  "lint": "eslint . --ext .ts,.js"
   },
   "dependencies": {
     "@types/redis": "^4.0.10",
@@ -17,6 +18,9 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "eslint": "^9.35.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
