Added queuing for seat hold and reservation, updated documentation

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node index.ts",
-    "watch": "ts-node-dev --respawn --transpile-only index.ts",
+    "start": "node dist/src/index.js",
+    "dev": "ts-node src/index.ts",
+    "watch": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "worker": "ts-node src/worker.ts",
     "lint": "eslint . --ext .ts,.js",
     "test": "jest"
   },
